[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/hud/skill/skill_empty.png" type="Texture" id=1]
[ext_resource path="res://ui/hud/skill/skill_cooldown.png" type="Texture" id=2]
[ext_resource path="res://ui/hud/skill/skill_cooldown_base.png" type="Texture" id=3]
[ext_resource path="res://ui/hud/skill/skills_hud.gd" type="Script" id=4]

[node name="SkillsHud" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 24.0
mouse_filter = 2
alignment = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill1" type="TextureRect" parent="."]
margin_left = 268.0
margin_right = 292.0
margin_bottom = 24.0
mouse_filter = 0
texture = ExtResource( 1 )

[node name="CooldownIndicator" type="TextureProgress" parent="Skill1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -6.875, 9.5 )
rounded = true
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownLabel" type="Label" parent="Skill1"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill2" type="TextureRect" parent="."]
margin_left = 296.0
margin_right = 320.0
margin_bottom = 24.0
texture = ExtResource( 1 )

[node name="CooldownIndicator" type="TextureProgress" parent="Skill2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -6.875, 9.5 )
mouse_filter = 2
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
fill_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownLabel" type="Label" parent="Skill2"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillOneTimer" type="Timer" parent="."]
one_shot = true

[node name="SkillTwoTimer" type="Timer" parent="."]
one_shot = true

[connection signal="gui_input" from="Skill1" to="." method="_on_Skill1_gui_input"]
[connection signal="gui_input" from="Skill2" to="." method="_on_Skill2_gui_input"]
